--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,26 +60,44 @@ section {
 .sec1 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: green;
 }
 
 .sec2 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: blue;
 }
 
 .sec3 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: purple;
 }
 
 .sec4 {
   display: none;
-  transform: translateY(0) scale(1);
+  transform: translateY(0) scaleY(1);
+  background-color: red;
 }
 
 .sec5 {
   display: none;
-  transform: translateY(0) scale(1);
+  transform: translateY(0) scaleY(1);
+  background-color: yellow;
+}
+
+.active {
+  display: block;
+  animation: scaleAnim 1s ease-in-out;
+}
+@keyframes scaleAnim {
+  0% {
+    transform: translateY(-100%) scale(0);
+  }
+  100% {
+    transform: translateY(0) scale(1);
+  }
 }
 
 .controls {
@@ -91,6 +109,13 @@ section {
   flex-direction: column;
   align-items: center;
   transform: translateY(-50%);
+}
+.controls .active-btn {
+  background-color: var(--color-secondary) !important;
+  transition: all 0.4s ease-in-out;
+}
+.controls .active-btn i {
+  color: var(--color-white) !important;
 }
 .controls .control {
   padding: 1rem;
@@ -106,7 +131,7 @@ section {
   box-shadow: var(--box-shadow-1);
 }
 .controls .control i {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   color: var(--color-grey2);
   pointer-events: none;
 }/*# sourceMappingURL=styles.css.map */
